gobmkida/g1/edge_block_moves
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_block_moves/src/engine/reading.c:4158:6: error: use of undeclared identifier 'dword_760CDC'
v7 = dword_760CDC[v5]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/edge_block_moves/src/obj/1/reading.o] Error 1
